# ai-rag-docsearch-knowledge-engine

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
docs/: SYSTEM_DESIGN.md
sample-docs/compliance/: ai-governance-model-risk-policy.txt  data-privacy-compliance-manual.txt  financial-controls-sox-policy.txt  information-security-risk-standard.txt  vendor-risk-management-handbook.txt
scripts/: demo.py  demo.sh
src/aidoc/: __init__.py  models.py  pipeline.py
src/aidoc/chunking/: semantic_chunker.py
src/aidoc/embedding/: local_embedding.py
src/aidoc/foundation/: model_provider.py
src/aidoc/io/: local_loader.py
src/aidoc/kg/: knowledge_graph.py
src/aidoc/nlp/: enrichment.py  entity_extractor.py  patterns.py  relation_extractor.py
src/aidoc/rag/: answer_builder.py
src/aidoc/retrieval/: hybrid_retriever.py
tests/: test_pipeline.py
